<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="filter_activity_name">Filter images</string>
    <string name="search_label">Search</string>
    <string name="save_label">Save</string>
    <string name="share_label">Share</string>
    <string name="filters_header_label">Filters</string>
    <string name="image_title_label">Image title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="filter_settings_label">Filter</string>
    <string name="filter_color_label">Color</string>
	<string name="filter_size_label">Size</string>
    <string name="filter_site_label">Site</string>
    <string name="filter_type_label">Type</string>
    <string name="option_yellow">Yellow</string>
    <string name="option_blue">Blue</string>
    <string name="option_black">Black</string>
    <string name="option_red">Red</string>
    <string name="option_white">White</string>
    <string name="option_grey">Grey</string>
    <string name="option_orange">Orange</string>
    <string name="option_pink">Pink</string>
    <string name="option_green">Green</string>
    <string name="option_brown">Brown</string>
    <string name="option_small">Small</string>
    <string name="option_medium">Medium</string>
    <string name="option_large">Large</string>
    <string name="option_xlarge">Extra large</string>
    <string name="option_faces">Faces</string>
    <string name="option_photo">Photo</string>
    <string name="option_clipart">Clipart</string>
    <string name="option_lineArt">Lineart</string>    
</resources>
